--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Amr Ayyad, MSc</h1>
+                <h1>Amr Ayyad, PhD</h1>
                 <p class="tagline">BI Developer & Data Consultant</p>
                 <p>Data and Business Intelligence Professional with over 5 years of experience driving data strategy, analytics solutions, and BI enablement across multinational corporations, government initiatives, and academic institutions.</p>
                 
